# xmobar-luca

./: CHANGELOG.md  cabal.project  default.nix  flake.nix  readme.md  result  xmobar-luca.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
res/icon/: batteryCharged.xpm  batteryCharging.xpm  batteryDrainHalf.xpm  camera.xpm  close.xpm  cpu.xpm  logo.xbm  logo.xpm  menu.xpm  microphone.xpm  ram.xpm  temperature.xpm  wifi.xpm
res/speech/: README.md  speech.py
res/speech/icon/: drawing.xcf
src/: Plugins.hs
